@@ -1,30 +1,21 @@
 package org.sagebionetworks.repo.manager.grid.internal.replica.model;
 
-import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import org.json.JSONObject;
+import org.json.JSONArray;
 import org.sagebionetworks.repo.model.grid.node.ConstantNode;
 import org.sagebionetworks.repo.model.grid.patch.LogicalTimestamp;
-import org.sagebionetworks.repo.model.grid.patch.compact.LogicalTimestampCompactSerializable;
 
 public class SynapseRow implements HasConstantIds {
 
 	/**
-	 * The ID of the object that contains: 'rowId', 'versionNmber', and 'etag'.
+	 * The ID of the constant that contains the JSON array with the 'rowId', 'versionNumber' and 'etag'.
 	 */
-	private LogicalTimestamp objectId;
-	/**
-	 * The metadata is first read from the DB as constant IDs. This map is used to
-	 * hold those IDs temporarily, until they can be resolved with a secondary
-	 * constant lookup.
-	 */
-	private Map<String, LogicalTimestamp> tempConstantMap;
+	private LogicalTimestamp constantId;
+	
 	private Long rowId;
 	private Long versionNumber;
 	private String etag;
@@ -56,58 +47,34 @@ public class SynapseRow implements HasConstantIds {
 		return this;
 	}
 
-	public LogicalTimestamp getObjectId() {
-		return objectId;
+	public LogicalTimestamp getConstantId() {
+		return constantId;
 	}
 
-	public SynapseRow setObjectId(LogicalTimestamp objectId) {
-		this.objectId = objectId;
+	public SynapseRow setConstantId(LogicalTimestamp constantId) {
+		this.constantId = constantId;
 		return this;
-	}
-
-	public SynapseRow setTempObject(String json) {
-		JSONObject jsonOb = new JSONObject(json);
-		if (jsonOb.length() > 0) {
-			this.tempConstantMap = new HashMap<>(jsonOb.length());
-			jsonOb.keySet().stream().forEach(k -> {
-				this.tempConstantMap.put(k, LogicalTimestampCompactSerializable.deserialize(jsonOb.getJSONArray(k)));
-			});
-		}
-		return this;
-	}
-
-	public Collection<LogicalTimestamp> listConstantsIds() {
-		return tempConstantMap == null ? Collections.emptyList() : tempConstantMap.values();
 	}
 
 	@Override
 	public List<LogicalTimestamp> getConstantIds() {
-		return tempConstantMap == null ? Collections.emptyList()
-				: tempConstantMap.values().stream().collect(Collectors.toList());
+		return constantId == null ? Collections.emptyList() : List.of(constantId);
 	}
 
 	@Override
 	public void applyConstants(Map<LogicalTimestamp, ConstantNode> constants) {
-		if (this.tempConstantMap != null) {
-			LogicalTimestamp rowIdId = this.tempConstantMap.get("rowId");
-			if (rowIdId != null) {
-				this.rowId = Long.parseLong(constants.get(rowIdId).getValue().toString());
-			}
-			LogicalTimestamp versionId = this.tempConstantMap.get("versionNumber");
-			if (versionId != null) {
-				this.versionNumber = Long.parseLong(constants.get(versionId).getValue().toString());
-			}
-			LogicalTimestamp etagId = this.tempConstantMap.get("etag");
-			if (etagId != null) {
-				this.etag = (String) constants.get(etagId).getValue();
-			}
-			this.tempConstantMap = null;
+		if (this.constantId != null) {
+			JSONArray jsonArray = (JSONArray) constants.get(constantId).getValue();
+			
+			this.rowId = jsonArray.isNull(0) ? null : jsonArray.getLong(0);
+			this.versionNumber = jsonArray.isNull(1) ? null : jsonArray.getLong(1);
+			this.etag = jsonArray.isNull(2) ? null : jsonArray.getString(2);
 		}
 	}
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(etag, objectId, rowId, versionNumber);
+		return Objects.hash(etag, constantId, rowId, versionNumber);
 	}
 
 	@Override
@@ -119,13 +86,13 @@ public class SynapseRow implements HasConstantIds {
 		if (getClass() != obj.getClass())
 			return false;
 		SynapseRow other = (SynapseRow) obj;
-		return Objects.equals(etag, other.etag) && Objects.equals(objectId, other.objectId)
+		return Objects.equals(etag, other.etag) && Objects.equals(constantId, other.constantId)
 				&& Objects.equals(rowId, other.rowId) && Objects.equals(versionNumber, other.versionNumber);
 	}
 
 	@Override
 	public String toString() {
-		return "SynapseRow [objectId=" + objectId + ", rowId=" + rowId + ", versionNumber=" + versionNumber + ", etag="
+		return "SynapseRow [constantId=" + constantId + ", rowId=" + rowId + ", versionNumber=" + versionNumber + ", etag="
 				+ etag + "]";
 	}
 
